# chat-lse

./: .all-contributorsrc  .env.sample  .gitignore  CONTRIBUTING.md  README.md  REPLICATION.md  db.ipynb  db.py  docker-compose-test.yml  docker-compose.yml  key.env  main.py  mydb.duckdb  mydb.duckdb.wal  opensource_llm_demo.py  package-lock.json  pyproject.toml  requirements.txt  scrapy.cfg  setup_duckdb_database.py  setup_duckdb_seeddata.py  table.py
analysis/: NB01 - Check data validity.ipynb
chatlse/: clients.py
crawler/: NB03 - Check For Page Updates.ipynb  items.py  output.csv  pipelines.py  settings.py
data/: NB02 - Fix parse_boxes() issue.ipynb  README.md  error_downloads.jsonl  ingested_data.json
dsi_crawler/: NB03 - Check For Page Updates.ipynb  items.py  middlewares.py  pipelines.py  settings.py
environment/: Dockerfile  postInstall
experimental-selenium/: merged_data.json
fastapi_app/: NB01 - Chunking PDFs.ipynb  NB02 - Explore SentenceSplitter.ipynb  NB05 - Embed pptx.ipynb  __init__.py  api_routes.py  classification_fine_tuning.py  clients.py  create_cosine_similarity_function.sql  delete_database_entries.ipynb  embeddings.py  frontend_routes.py  globals.py  logger.py  middleware.py  neo4j_searcher.py  openai_clients.py  postgres_engine.py  postgres_models.py  postgres_neo4j_searcher.py  postgres_searcher.py  rag_advanced.py  rag_simple.py  seed_data_lse.json  (+10 more)
src/python/: pyproject.toml
src/python/chatlse/: clients.py  crawler.py  cross_chunk_attention.py  embeddings.py  llm_functions.py  multihead_attention.py  postgres_engine.py
(+168 files in other folders)
