[build-system]
requires = ["hatchling"] 
build-backend = "hatchling.build" 

[tool.hatch.build.targets.wheel]
packages = ["src/python/chatlse"]

[project]
name = "chatlse"
version = "0.1"
authors = [
  { name="tz1211", email="y.zhou169@lse.ac.uk" },
]
description = "Package for ChatLSE functions"
requires-python = ">=3.8"
dependencies = [
    "openai==1.25.2", 
    "llama-index.embeddings.huggingface==0.2.2", 
    "PyPDF2==3.0.1", 
    "python-dotenv==1.0.1", 
    "llama-index==0.10.32", 
    "sqlalchemy>=2.0.23", 
    "sqlalchemy[asyncio]==2.0.30"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]